@@ -1,3 +1,7 @@
+2000-03-01  Yuuichi Teranishi  <teranisi@gohome.org>
+
+	* APEL: Version 10.2 released.
+
 2000-02-29  Yuuichi Teranishi  <teranisi@gohome.org>
 
 	* poe-18.el (current-time-string): Fixed leap year's day counting bug.
